@@ -170,6 +170,17 @@
 		  </child>
 
 		  <child>
+		    <widget class="GtkMenuItem" id="duplicate_menuitem">
+			<property name="visible">True</property>
+			<property name="sensitive">False</property>
+			<property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+			<property name="label" translatable="yes">_Duplicate Disc</property>
+			<property name="use_underline">True</property>
+			<signal name="activate" handler="on_duplicate_activate"/>
+		    </widget>
+		  </child>
+
+		  <child>
 		    <widget class="GtkSeparatorMenuItem" id="separator2">
 		      <property name="visible">True</property>
 		    </widget>
