@@ -1,5 +1,12 @@
 2008-01-05  Ross Burton  <ross@burtonini.com>
 
+	* data/sound-juicer.glade:
+	* src/sj-main.[ch]:
+	Add a Duplicate Disc menu item, which calls nautilus-cd-burner.
+	(#361122, thanks Dave Meikle).
+
+2008-01-05  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-extracting.c:
 	Show a better error message if we can't create the target
 	directories (#354208, thanks MatzeB).
